tests/baselines/reference/parserIndexSignature10.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature10.ts(2,5): error TS1096: An index signature must have exactly one parameter.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature10.ts (1 errors) ====
    interface I {
       [a, b]: number
        ~
!!! error TS1096: An index signature must have exactly one parameter.
    }